<UI/UX fix 2.5.0>

--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -36,7 +36,7 @@
                     android:foregroundGravity="center"
                     android:layout_marginTop="300dp"
                     android:clickable="false"
-                    app:srcCompat="@drawable/ic_doctor_svgrepo_com__1_"
+                    app:srcCompat="@drawable/doctor"
                     android:contentDescription="TODO" />
 
                 <TextView
