--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -5,13 +5,13 @@
 
     <item android:id="@+id/nav_doctor"
         android:title="@string/visits"
-        android:icon="@drawable/ic_doctor_svgrepo_com"
+        android:icon="@drawable/doctor"
         app:showAsAction="ifRoom"
         />
 
     <item android:id="@+id/nav_lab"
         android:title="@string/labs"
-        android:icon="@drawable/ic_lab_svgrepo_com"
+        android:icon="@drawable/labs"
         app:showAsAction="ifRoom"
         />
 
