--- a/app/src/main/res/layout/activity_new_habit.xml
+++ b/app/src/main/res/layout/activity_new_habit.xml
@@ -43,7 +43,7 @@
         android:paddingTop="50dp"
         android:layout_marginTop="-40dp"
         android:layout_marginBottom="40dp"
-        android:background="@color/RobbinsEggBlue"
+        android:background="@color/Hex"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent">
