--- a/app/src/main/res/layout/activity_change_language.xml
+++ b/app/src/main/res/layout/activity_change_language.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.settings.ChangeLanguage">
+    tools:context=".ui.settings.ChangeLanguage"
+    android:background="@color/Hex"
+    >
     
     <TextView
         android:id="@+id/tv_change_language"
@@ -13,6 +15,7 @@
         android:layout_marginStart="104dp"
         android:text="@string/change_language"
         android:textSize="22sp"
+        android:textColor="#234E70"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -40,6 +43,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/english"
             android:textSize="14sp"
+            android:textColor="#234E70"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -52,6 +56,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/belorussian"
             android:textSize="14sp"
+            android:textColor="#234E70"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -64,6 +69,7 @@
             android:layout_marginStart="16dp"
             android:text="@string/polish"
             android:textSize="14sp"
+            android:textColor="#234E70"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
