--- a/app/src/main/res/layout/activity_doctor.xml
+++ b/app/src/main/res/layout/activity_doctor.xml
@@ -96,7 +96,7 @@
                     android:id="@+id/doctor_add_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:backgroundTint="#FFA000"
+                    android:backgroundTint="@color/RobbinsEggBlue"
                     app:srcCompat="@drawable/ic_baseline_add_24"
                     app:layout_anchor="@id/doctor_bottomAppBar"
                     android:contentDescription="TODO" />
