--- a/app/src/main/res/layout/lab_custom_list_view.xml
+++ b/app/src/main/res/layout/lab_custom_list_view.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
+    android:background="@color/Hex"
     android:layout_height="match_parent">
 
     <TextView
@@ -16,6 +16,7 @@
         android:fontFamily="@font/roboto_bold"
         android:text="@string/lab_test_name"
         android:textSize="30sp"
+        android:textColor="#234E70"
         tools:layout_editor_absoluteX="28dp"
         tools:layout_editor_absoluteY="18dp" />
 
@@ -29,6 +30,7 @@
         android:layout_marginTop="99dp"
         android:layout_marginBottom="5dp"
         android:text="@string/time_12_12_2022"
+        android:textColor="#234E70"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="63dp" />
 
@@ -41,6 +43,7 @@
         android:layout_marginStart="10dp"
         android:layout_marginTop="60dp"
         android:text="@string/doctor_name"
+        android:textColor="#234E70"
         tools:layout_editor_absoluteX="30dp"
         tools:layout_editor_absoluteY="63dp" />
 
