--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -7,4 +7,6 @@
     android:gravity="center"
     android:textSize="14sp"
     android:textIsSelectable="false"
-    android:text="Name" />
+    android:text="Name"
+    android:background="@color/Hex"
+    />
