--- a/app/src/main/res/layout/task.xml
+++ b/app/src/main/res/layout/task.xml
@@ -4,7 +4,8 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="50dp"
-    tools:context=".ui.ToDoList.ToDoListActivity">
+    tools:context=".ui.ToDoList.ToDoListActivity"
+    android:background="@color/Hex">
 
     <TextView
         android:id="@+id/taskItem"
