--- a/app/src/main/res/layout/view_habit.xml
+++ b/app/src/main/res/layout/view_habit.xml
@@ -4,8 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent_layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-
+    android:layout_height="wrap_content"
+    android:background="@color/Hex"
+    >
 
     <ImageButton
         android:id="@+id/habityes"
