--- a/app/src/main/res/layout/activity_lab.xml
+++ b/app/src/main/res/layout/activity_lab.xml
@@ -82,7 +82,7 @@
             android:layout_height="60dp"
             android:layout_gravity="bottom"
             app:fabAlignmentMode="end"
-            android:backgroundTint="@color/teal_700"
+            android:backgroundTint="@color/Hex"
             app:hideOnScroll="true"
             app:menu="@menu/lab_menu"
             />
