--- a/app/src/main/res/layout/activity_notification_fragment.xml
+++ b/app/src/main/res/layout/activity_notification_fragment.xml
@@ -18,6 +18,7 @@
         android:text="@string/pills"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -33,7 +34,7 @@
         android:layout_marginEnd="8dp"
         android:backgroundTint="#A7BEAE"
         android:text="@string/visits"
-
+        android:textColor="@color/white"
         android:textAlignment="center"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -52,6 +53,7 @@
         android:backgroundTint="#A7BEAE"
         android:text="@string/labs"
         android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
