--- a/app/src/main/res/layout/activity_note.xml
+++ b/app/src/main/res/layout/activity_note.xml
@@ -24,7 +24,7 @@
             android:orientation="vertical">
 
             <EditText
-                android:background="@color/Hex"
+                android:backgroundTint="@color/Hex"
                 android:id="@+id/et_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -55,7 +55,7 @@
                 android:linksClickable="true"
                 android:paddingEnd="8dp"
                 android:paddingStart="8dp"
-                android:background="@color/Hex"
+                android:backgroundTint="@color/Hex"
                 android:textCursorDrawable="@null"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/title"
