--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -16,7 +16,7 @@
             android:layout_width="91dp"
             android:layout_height="49dp"
             android:gravity="center"
-            android:text="Settings"
+            android:text="@string/settings"
             android:textSize="22sp"
             android:textStyle="bold"
             android:textColor="#234E70"
@@ -55,7 +55,7 @@
             android:id="@+id/tv_edit_language"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Choose language"
+            android:text="@string/choose_language"
             android:textColor="#234E70"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -101,7 +101,7 @@
             android:id="@+id/tv_change_password"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change password"
+            android:text="@string/change_password"
             android:textColor="#234E70"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -145,7 +145,7 @@
             android:id="@+id/tv_change_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Change email"
+            android:text="@string/change_email"
             android:textColor="#234E70"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -235,7 +235,7 @@
             android:id="@+id/tv_delete_account"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="delete account"
+            android:text="@string/delete_account"
             android:textColor="#234E70"
             android:textStyle="normal"
             app:layout_constraintBottom_toBottomOf="parent"
