--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_gravity="center_vertical"
@@ -12,31 +12,33 @@
 
     <ImageView
         android:id="@+id/imageView2"
-        android:layout_width="176dp"
-        android:layout_height="139dp"
+        android:layout_width="156dp"
+        android:layout_height="120dp"
         android:layout_gravity="center_horizontal"
         android:clickable="false"
         android:src="@drawable/vozyk_log" />
 
     <TextView
-            android:id="@+id/textView3"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textColor="#234E70"
-            android:gravity="center_horizontal"
-            android:text="@string/profile"
-            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
+        android:id="@+id/textView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:text="@string/profile"
+        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+        android:textColor="#234E70"
+        android:textStyle="bold" />
 
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:layout_width="200dp"
-            android:id="@+id/imagetoupload"
-            android:layout_height="200dp"
-            android:scaleType="centerCrop"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/defaultprofile">
-        </de.hdodenhof.circleimageview.CircleImageView>
-        <TextView
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/imagetoupload"
+        android:layout_width="167dp"
+        android:layout_height="179dp"
+        android:layout_gravity="center_horizontal"
+        android:scaleType="centerCrop"
+        android:src="@drawable/defaultprofile">
+
+    </de.hdodenhof.circleimageview.CircleImageView>
+
+    <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/touch_profile_picture_to_change"
@@ -77,15 +79,23 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="100dp"
-            android:orientation="horizontal"
-            android:gravity="center">
+            android:gravity="center"
+            android:orientation="vertical">
 
             <ImageButton
                 android:id="@+id/settings"
                 android:layout_width="72dp"
-                android:layout_height="72dp"
+                android:layout_height="67dp"
+                android:layout_gravity="center_horizontal"
                 android:background="@drawable/settings_"
-                />
+                android:scaleType="centerCrop" />
+
+            <TextView
+                android:layout_width="70dp"
+                android:layout_height="42dp"
+                android:text="@string/settings"
+                android:gravity="center"
+                app:layout_constraintTop_toBottomOf="@+id/settings" />
         </LinearLayout>
     </LinearLayout>
 
@@ -97,9 +107,8 @@
         android:id="@+id/image_logo"
         android:layout_width="match_parent"
         android:layout_height="66dp"
-        android:layout_below="@id/Email"
         android:layout_marginBottom="496dp"
-        android:contentDescription="TODO"
+        android:contentDescription=""
         android:src="@drawable/vozyk_1" />
 
 
