--- a/app/src/main/res/layout/fragment_meds.xml
+++ b/app/src/main/res/layout/fragment_meds.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#cff7d3"
-    tools:context=".ui.notifications.NotificationsPills">
+    tools:context=".ui.meds.MedsPills">
 
     <RelativeLayout
         android:layout_width="match_parent"
